resolve header visibility

--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .header {
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100vw;
     background: var(--bg-primary);
